--- a/backend/core/package.json
+++ b/backend/core/package.json
@@ -5,14 +5,22 @@
   "type": "commonjs",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "tsc && node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/amqplib": "^0.10.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
-    "express": "^4.21.1"
+    "@types/jsonwebtoken": "^9.0.7",
+    "amqplib": "^0.10.4",
+    "bcrypt": "^5.1.1",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "redis": "^4.7.0",
+    "zod": "^3.23.8"
   }
 }
