--- a/backend/dbcore/package.json
+++ b/backend/dbcore/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "core",
+  "name": "dbcore",
   "version": "1.0.0",
   "main": "src/server.js",
   "type": "commonjs",
@@ -13,15 +13,16 @@
   "description": "",
   "dependencies": {
     "@types/amqplib": "^0.10.5",
-    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
     "amqplib": "^0.10.4",
-    "bcrypt": "^5.1.1",
+    "cassandra-driver": "^4.7.2",
     "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "redis": "^4.7.0",
-    "uuid": "^11.0.1",
-    "zod": "^3.23.8"
+    "pg": "^8.13.1",
+    "uuid": "^11.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.8.1",
+    "@types/pg": "^8.11.10",
+    "typescript": "^5.6.3"
   }
 }
